# petpet

./: .gitignore  index.html  package-lock.json  package.json
architect/: FLOW.md  FOR_SERVER_DEVS.md  OVERVIEW.md  PET.md  README.md  TAURI.md
src/: App.tsx
src-tauri/: CONFIG_NOTES.md  Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs
src/game/: PetScene.ts
tasks/1/: 1-1.md  1-2.md  TODO.md
tasks/2/: 2-2.md  TODO.md
